repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__api_v1_project__vulnerable.snap
---
source: repology-webapp/tests/snapshot_tests/api_v1_project.rs
expression: response.as_json_snapshot().unwrap()
---
Status: 200
Header: content-type: application/json
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'self'
Header: x-frame-options: DENY
Header: referrer-policy: unsafe-url
Header: cache-control: max-age=3600
Header: content-length: 119
---
[
  {
    "origversion": "1.0_1",
    "repo": "repo",
    "status": "newest",
    "version": "1.0",
    "visiblename": "visiblename",
    "vulnerable": true
  }
]
